--- a/html/index.html
+++ b/html/index.html
@@ -45,8 +45,8 @@
       </div>
 
       <div class="wrap">
-        <div class="mainWrap">
-          <div class="header">
+        <main>
+          <header>
             <div class="faceLine">
               <div class="lane">
                 <form action="#">
@@ -61,7 +61,7 @@
                 <img src="../images/face.svg" alt="face" />
               </div>
             </div>
-          </div>
+          </header>
           <div class="section margin">
             <div class="gift">
               <h1>GIFTING DAYS</h1>
@@ -210,7 +210,8 @@
                 </div>
                 <h3>Spider-Man</h3>
                 <span
-                  >Spider-Man swinging into a new dimension—glitter, glam, and fabulous web-slinging</span
+                  >Spider-Man swinging into a new dimension—glitter, glam, and
+                  fabulous web-slinging</span
                 >
               </div>
               <div class="inside">
@@ -224,7 +225,8 @@
                 </div>
                 <h3>Spongebob boss</h3>
                 <span
-                  >SpongeBob leveled up—straight from Bikini Bottom to blinged-out boss mode!</span
+                  >SpongeBob leveled up—straight from Bikini Bottom to
+                  blinged-out boss mode!</span
                 >
               </div>
               <div class="inside">
@@ -238,7 +240,8 @@
                 </div>
                 <h3>Spongebob boss</h3>
                 <span
-                  >When Squidward trades his clarinet for clout and a double cup</span
+                  >When Squidward trades his clarinet for clout and a double
+                  cup</span
                 >
               </div>
             </div>
@@ -257,7 +260,8 @@
                 </div>
                 <h3>Professor Snape</h3>
                 <span
-                  >When Professor Snape brews a potion for swag and crashes Barbie's dream party!</span
+                  >When Professor Snape brews a potion for swag and crashes
+                  Barbie's dream party!</span
                 >
               </div>
               <div class="inside">
@@ -271,7 +275,8 @@
                 </div>
                 <h3>Flex mans</h3>
                 <span
-                  >Harry Potter and the Goblet of Drip: Dobby flexes his freedom in style!</span
+                  >Harry Potter and the Goblet of Drip: Dobby flexes his freedom
+                  in style!</span
                 >
               </div>
               <div class="inside">
@@ -284,9 +289,7 @@
                   <img src="../images/Group.svg" alt="star" />
                 </div>
                 <h3>Dumbledore</h3>
-                <span
-                  >Abracadabra, but make it fabulous.</span
-                >
+                <span>Abracadabra, but make it fabulous.</span>
               </div>
               <div class="inside">
                 <img src="../images/avada.svg" alt="grinch" />
@@ -298,13 +301,11 @@
                   <img src="../images/non.svg" alt="star" />
                 </div>
                 <h3>Avada kedrippa</h3>
-                <span
-                  >Nagini’s just here for the photo op</span
-                >
+                <span>Nagini’s just here for the photo op</span>
               </div>
             </div>
           </div>
-        </div>
+        </main>
       </div>
     </div>
   </body>
